nextcloud-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud                  # < name of the deploymentand reference           # < namespace where to place the deployment and pods
  labels:                         
    app: nextcloud 
spec:
  replicas: 1                      # < number of pods to deploy
  selector:
    matchLabels:
      app: nextcloud
  strategy:
    rollingUpdate:
      maxSurge: 0                  # < The number of pods that can be created above the desired amount of pods during an update
      maxUnavailable: 1            # < The number of pods that can be unavailable during the update process
    type: RollingUpdate            # < New pods are added gradually, and old pods are terminated gradually
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      volumes:
      - name: nfs-nextcloud                # < linkname of the volume for the pvc
        persistentVolumeClaim:
          claimName: nextcloud-pv-claim
      containers:
      - image: ghcr.io/linuxserver/nextcloud  # < the name of the docker image we will use
        name: nextcloud                    # < name of container
        imagePullPolicy: Always            # < always use the latest image when creating container/pod
        env:                               # < environment variables. See https://hub.docker.com/r/linuxserver/nextcloud
        - name: PGID
          value: "100" # < group "user"
        - name: PUID
          value: "1041" # < user "docker"
        - name: TZ
          value: Europe/Amsterdam
        - name: REDIS_HOST_PORT
          value: "6379"
        - name: REDIS_HOST
          value: redis-service
        ports:
         - containerPort: 80              # < required network portnumber. See https://hub.docker.com/r/linuxserver/nextcloud
           name: https-80
           protocol: TCP
        volumeMounts:                      # < the volume mount in the container. Look at the relation volumelabel->pvc->pv
         - mountPath: /config              
           name: nfs-nextcloud
           subPath: config
         - mountPath: /data
           name: nfs-nextcloud
           subPath: data
