redis-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:                         
    app: redis 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  strategy:
    rollingUpdate:
      maxSurge: 0                  # < The number of pods that can be created above the desired amount of pods during an update
      maxUnavailable: 1            # < The number of pods that can be unavailable during the update process
    type: RollingUpdate            # < New pods are added gradually, and old pods are terminated gradually
  template:
    metadata:
      labels:
        app: redis
    spec:
      volumes:
        - name: data                # < linkname of the volume for the pvc
          persistentVolumeClaim:
            claimName: redis-pv-claim
        - name: config
          configMap:
            name: redis-config
            items:
            - key: redis-config
              path: redis.conf
      containers:
        - name: redis
          image: redis:5.0.4
          command:
            - redis-server
            - "/redis-master/redis.conf"
          imagePullPolicy: Always            # < always use the latest image when creating container/pod
          ports:
            - containerPort: 6379
          resources:
            limits:
              cpu: "0.1"
          volumeMounts:                      # < the volume mount in the container. Look at the relation volumelabel->pvc->pv
            - mountPath: /redis-master             
              name: config
            - mountPath: /redis-master-data
              name: data
